--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "mocha": "^6.1.4",
     "prettier": "^2.7.0",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "mongoose": ">= 5",
+    "redis": ">= 4.0.0",
+    "sequelize": ">=5.8.7"
   },
   "scripts": {
     "lint": "eslint src test",
