--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "koa2-ratelimit",
-  "author": "YSO CORP",
+  "name": "@yveskaufmann/koa2-ratelimit",
+  "author": "Yves Kaufmann",
   "version": "1.1.1",
   "description": "IP rate-limiting middleware for Koajs 2. Use to limit repeated requests to APIs and/or endpoints such as password reset.",
   "main": "dist/index.js",
@@ -8,14 +8,20 @@
   "engines": {
     "node": ">=7.10.1"
   },
-  "people": {
-    "name": "YSO CORP",
-    "email": "contact@ysocorp.com",
-    "url": "http://ysocorp.com"
-  },
+  "people": [
+    {
+      "name": "YSO CORP",
+      "email": "contact@ysocorp.com",
+      "url": "http://ysocorp.com"
+    },
+    {
+      "name": "Yves Kaufmann",
+      "url": "https://github.com/yveskaufmann"
+    }
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ysocorp/koa2-ratelimit"
+    "url": "https://github.com/yveskaufmann/koa2-ratelimit"
   },
   "peerDependencies": {
     "mongoose": ">= 5",
